# Terroir

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  setup.bat  setup.sh  vcpkg.json
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  Terroir.code-workspace  main.cpp
Sandbox/src/FighterLike/: FigherLike.cpp  FighterLike.h
Sandbox/src/pong/: pong.cpp  pong.h
Terroir/: CMakeLists.txt  Terroir.h  Tpch.h
Terroir/include/: Terroir.h
Terroir/pch/: Tpch.h
Terroir/src/: AppEntry.h  Application.cpp  Application.h  Core.h  Terroir.h  Test.cpp  Test.h
Terroir/src/Terroir/: AppEntry.h  Application.cpp  Application.h  Core.h
Terroir/src/core/: AppEntry.h  Assert.h  Color.h  KeyCodes.h  MouseButtonCodes.h  Profile.h  Timestep.h  Types.h
Terroir/src/core/application/: Application.cpp  Application.h
Terroir/src/core/event/: AllEvents.h  ApplicationEvent.h  Event.h  EventType.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Terroir/src/core/layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Terroir/src/core/profiling/: TracyClient.cpp
Terroir/src/dear-imgui/: DearImGuiLayer.cpp  DearImGuiLayer.h
Terroir/src/log/: Log.cpp  Log.h
Terroir/src/math/: Math.h
Terroir/src/platform/: Input.h  Window.cpp  Window.h  WindowProperties.h
Terroir/src/platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Terroir/src/platform/audio/: AudioManager.cpp  AudioManager.h  MAAudioManager.cpp  MAAudioManager.h  MiniAudio.cpp  MiniAudio.h
Terroir/src/platform/glfw/: DearImGuiGLFW.cpp  DearImGuiGLFW.h  GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
Terroir/src/platform/opengl/: DearImGuiOpenGLRenderer.cpp  DearImGuiOpenGLRenderer.h
Terroir/src/renderer/: GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  imgui.ini  stb_image.cpp
Terroir/src/renderer/buffer/: BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Terroir/src/renderer/camera/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Terroir/src/renderer/opengl/: OpenGLContext.cpp  OpenGLContext.h  OpenGLFontTexture.cpp  OpenGLFontTexture.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderer.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Terroir/src/renderer/renderable/: Renderable2D.cpp  Renderable2D.h  Sprite.cpp  Sprite.h
Terroir/src/renderer/renderable/font/: CharacterData.h  Font.cpp  Font.h
Terroir/src/renderer/shader/: DefaultFragShader.glsl  DefaultVertexShader.glsl  FontFragShader.glsl  FontVertexShader.glsl  FragShader2.glsl  NewFragShader.glsl  NewVertexShader.glsl  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderLoader.cpp  ShaderLoader.h  TextureFragShader.glsl  TextureVertexShader.glsl  VertexShader2.glsl
Terroir/src/renderer/texture/: FontTexture2D.cpp  FontTexture2D.h  Texture.h  Texture2D.cpp  Texture2D.h
Terroir/src/utils/: types.h
build-scripts/: setup.py
